--- a/src/main/web/src/app/pages/user-card/user-card.component.css
+++ b/src/main/web/src/app/pages/user-card/user-card.component.css
@@ -51,3 +51,11 @@ p {
 ::ng-deep .ui-g-1, .ui-g-2, .ui-g-3, .ui-g-4, .ui-g-5, .ui-g-6, .ui-g-7, .ui-g-8, .ui-g-9, .ui-g-10, .ui-g-11, .ui-g-12 {
   margin-top: 0.0em !important;
 }
+
+::ng-deep .ui-float-label>input:focus~label,
+::ng-deep .ui-float-label>input.ui-state-filled~label,
+::ng-deep .ui-float-label>.ui-inputwrapper-focus~label,
+::ng-deep .ui-float-label>.ui-inputwrapper-filled~label {
+    top: -.75em;
+    font-size: 12px;
+}
