user card search: implementation for customerName

--- a/src/main/web/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
+++ b/src/main/web/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
@@ -11,6 +11,7 @@
 scrollHeight="58vh"
 selectionMode="single"
 [(selection)]="selection"
+[(first)] = "first"
 [dataKey]="dataKey"
 [totalRecords]="totalRecords"
 (onRowSelect)="onRowSelect($event)"
