--- a/src/main/web/src/app/pages/device/device.component.html
+++ b/src/main/web/src/app/pages/device/device.component.html
@@ -259,7 +259,7 @@
               </div>
 
               <div class="ui-g-12">
-                <div class="ui-g-12"><nb-checkbox [value]="(zoneDevice$ | async) ? true : udefined" (checkedChange)="handleChange($event)"><u><b>{{ 'Zone device' | translate }}</b></u></nb-checkbox></div>
+                <div class="ui-g-12"><nb-checkbox [value]="(zoneDevice$ | async) ? true : undefined" (checkedChange)="handleChange($event)"><u><b>{{ 'Zone device' | translate }}</b></u></nb-checkbox></div>
 
 
                 <div class="ui-g-6" [hidden]="!(zoneDevice$ | async)">
