--- a/src/main/web/src/app/pages/user-card/user-card.component.css
+++ b/src/main/web/src/app/pages/user-card/user-card.component.css
@@ -33,7 +33,7 @@ p {
 */
 ::ng-deep body .ui-table .ui-table-thead > tr > th {
    /* background-color: #007ad9 !important; */
-    color: #007ad9 !important;
+   /* color: #007ad9 !important; */
     font-weight: 700 !important;
 }
 
