--- a/src/main/web/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
+++ b/src/main/web/src/app/libs/toolbox-components/ngx-table/ngx-table.component.html
@@ -6,7 +6,7 @@
 [loading]="loading"
 [scrollable]="true"
 [paginator]="true"
-[rows]="20"
+[rows]="rows"
 [style]="{'width':'100%'}"
 scrollHeight="58vh"
 selectionMode="single"
