--- a/src/main/web/src/app/pages/user-card/user-card-details.component.css
+++ b/src/main/web/src/app/pages/user-card/user-card-details.component.css
@@ -2,3 +2,10 @@
   padding-top: 0.1em !important;
   padding-bottom: 0.1em !important;
 }
+
+::ng-deep body .ui-table .ui-table-thead > tr > th {
+  /* background-color: #007ad9 !important; */
+  /* color: #007ad9 !important; */
+   font-weight: 700 !important;
+   height: 54px !important;
+}
