--- a/src/main/web/src/app/pages/user-card/user-card.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card.component.html
@@ -3,7 +3,7 @@
     <nb-card-body>
 
         <nb-card status="info">
-          <nb-card-header>User Card</nb-card-header>
+          <nb-card-header>{{ 'User Card'|translate }}</nb-card-header>
           <nb-card-body>
 
       <div class="ui-g ui-fluid">
@@ -175,7 +175,8 @@
         [loading]="loading"
         [fontWeightFunction]="fontWeight"
         [styleColorFunction]="styleColor"
-        (clickFunction)="onCustomerNameClick()"
+        (clickFunction)="onCustomerNameClick($event)"
+        rows="10"
       ></ngx-table>
 
       <div style="position: relative; float: right; margin-top: 5px;">
@@ -191,4 +192,6 @@
     </nb-card-body>
   </nb-card>
 </div>
-<ngx-user-card-details [(displayDialog)]="displayDialog" (closeFunction)="onUserCardDialogClose($event)" ></ngx-user-card-details>
+<ng-container *ngIf="displayId$ | async">
+  <ngx-user-card-details [(displayDialog)]="displayDialog" [(userCardId)]="id" (closeFunction)="onUserCardDialogClose($event)" ></ngx-user-card-details>
+</ng-container>
