user card details - history table implementation

--- a/src/main/web/src/app/pages/user-card/user-card-details.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card-details.component.html
@@ -1,7 +1,7 @@
 <p-dialog header="{{ 'User Card '|translate }}" [(visible)]="displayDialog"
           (onShow)="onShow()" (onHide)="onHide()"
           [focusOnShow]="false" [responsive]="true"  dynamic="true"
-          showEffect="fade" [modal]="true" height="800" [style]="{width: '1400px'}">
+          showEffect="fade" [modal]="true" position="center" [style]="{width: '1400px', height: '820px', 'margin-top': '25px'}">
 
         <div class="ui-g ui-fluid" >
 
