--- a/src/main/web/src/app/pages/user-card/user-card-details.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card-details.component.html
@@ -1,7 +1,7 @@
 <p-dialog header="{{ 'User Card '|translate }}" [(visible)]="displayDialog"
           (onShow)="onShow()" (onHide)="onHide()"
           [focusOnShow]="false" [responsive]="true"  dynamic="true"
-          showEffect="fade" [modal]="true" position="center" [style]="{width: '1400px', height: '820px', 'margin-top': '25px'}">
+          showEffect="fade" [modal]="true" position="center" [style]="{width: '90%', height: '820px', 'margin-top': '25px'}">
 
         <div class="ui-g ui-fluid" >
 
@@ -108,7 +108,7 @@
           </nb-card>
 
           <div class="ui-g-12">
-            <div class="ui-g-7">
+            <div class="ui-g-6">
             <nb-card>
               <nb-card-body style="padding-left: 0; padding-right: 0; padding-top: 0;">
                 <ngx-table
@@ -122,6 +122,9 @@
                 ></ngx-table>
               </nb-card-body>
             </nb-card>
+          </div>
+          <div class="ui-g-6">
+            <p-chart type="bar" [data]="data"></p-chart>
           </div>
           </div>
         </div> <!-- fluid -->
