UX: background-color changed to Outlook one.

--- a/src/main/web/src/app/@theme/styles/_overrides.scss
+++ b/src/main/web/src/app/@theme/styles/_overrides.scss
@@ -26,13 +26,13 @@
 }
 
 .nb-theme-default nb-card.status-info nb-card-header {
-  background-color: #007ad9 !important;
-  border-bottom-color: #007ad9 !important;
+  background-color: #0072C6 !important;
+  border-bottom-color: #0072C6 !important;
 }
 
 .nb-theme-default nb-checkbox.status-basic .custom-checkbox.checked {
-  background-color: #007ad9 !important;
-  border-color: #007ad9 !important;
+  background-color: #0072C6 !important;
+  border-color: #0072C6 !important;
 }
 
 .ui-datatable thead th {
@@ -70,13 +70,17 @@
   margin-top: 10px;
 }
 
+body .ui-button {
+  background-color: #0072C6 !important;
+}
+
 body .ui-table .ui-table-thead > tr > th {
- /* color: #007ad9 !important; */
+ /* color: #0072C6 !important; */
   padding: -7.429em 0.857em;
   border: 0 !important;
   border-bottom: 1px solid #c8c8c8 !important;
   color: white !important;
-  background-color: #007ad9 !important
+  background-color: #0072C6 !important
   /*background-color: white !important;*/
 }
 
@@ -118,7 +122,7 @@ body .ui-paginator .ui-paginator-pages .ui-paginator-page.ui-state-active {
 body .ui-table .ui-sortable-column.ui-state-highlight {
   /*background-color: #f4f4f4 !important;*/
 
-  color: #007ad9 !important;
+  color: #0072C6 !important;
 
 }
 
