--- a/src/main/web/src/app/pages/user-card/user-card.component.css
+++ b/src/main/web/src/app/pages/user-card/user-card.component.css
@@ -32,15 +32,15 @@ p {
 }
 */
 ::ng-deep body .ui-table .ui-table-thead > tr > th {
-   /* background-color: #007ad9 !important; */
-   /* color: #007ad9 !important; */
+   /* background-color: #0072C6 !important; */
+   /* color: #0072C6 !important; */
     font-weight: 700 !important;
 }
 
 
 ::ng-deep body .ui-table .ui-sortable-column.ui-state-highlight {
   background-color: #f4f4f4 !important;
-  color: #007ad9 !important;
+  color: #0072C6 !important;
 }
 
 ::ng-deep body .ui-table .ui-sortable-column .ui-sortable-column-icon {
