user-account: added access field to control view level.

--- a/src/main/web/src/app/pages/account-management/mail-account.component.html
+++ b/src/main/web/src/app/pages/account-management/mail-account.component.html
@@ -133,6 +133,14 @@
                   </div>
             </div>
           </div>
+          <div class="ui-g-12">
+            <div class="ui-g-4">
+                <label for="sender">Last Check:</label>
+            </div>
+            <div class="ui-g-8">
+              <input pInputText id="lastCheck" name="lastCheck"  formControlName="lastCheck" (click)="$event.target.select()"  class="form-control" />
+            </div>
+          </div>
           </form>
         </div>
         <p-footer>
