user card - summary data displaying implemented.

--- a/src/main/web/src/app/pages/user-card/user-card.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <nb-card style="width: 100%;">
+  <nb-card style="width: 100%; margin-top: -15px;">
     <nb-card-body>
 
         <nb-card status="info">
