corrected calculation for usag.

--- a/src/main/web/src/app/pages/user-card/user-card.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card.component.html
@@ -53,7 +53,7 @@
             <div class="ui-float-label">
               <label>{{ "State" | translate }}: </label>
             </div>
-            <div style="padding-top: 25px;"><b>{{ sumDiffLastRead$ | async}}</b> m3
+            <div style="padding-top: 25px;"><b style="color: #931D03;">{{ sumDiffLastRead$ | async}}</b> m3
             </div>
           </div>
           </div>
