--- a/src/main/web/src/app/pages/user-card/user-card.component.html
+++ b/src/main/web/src/app/pages/user-card/user-card.component.html
@@ -25,35 +25,35 @@
             <div class="ui-float-label">
               <label>{{ "Usage Current" | translate }}: </label>
             </div>
-            <div style="padding-top: 25px;"><b>{{ sumUsageCurrent$ | async}}</b> m3
+            <div style="padding-top: 25px;"><b style="color: #61030C">{{ sumUsageCurrent$ | async}}</b> m3
             </div>
           </div>
           <div class="ui-g-2">
             <div class="ui-float-label">
               <label>{{ "Usage Reverse" | translate }}: </label>
             </div>
-            <div style="padding-top: 25px;"><b>{{ sumUsageCurrentReverse$ | async}}</b> m3
+            <div style="padding-top: 25px;"><b style="color: #61030C">{{ sumUsageCurrentReverse$ | async}}</b> m3
             </div>
           </div>
           <div class="ui-g-2">
             <div class="ui-float-label">
               <label>{{ "Monthly Usage" | translate }}: </label>
             </div>
-            <div style="padding-top: 25px;"><b>{{ sumUsageCurrentMonth$ | async}}</b> m3
+            <div style="padding-top: 25px;"><b style="color: #61030C">{{ sumUsageCurrentMonth$ | async}}</b> m3
             </div>
           </div>
           <div class="ui-g-2">
             <div class="ui-float-label">
               <label>{{ "Usage Average" | translate }}: </label>
             </div>
-            <div style="padding-top: 25px;"><b>{{ sumUsageAverage$ | async}}</b> m3
+            <div style="padding-top: 25px;"><b style="color: #61030C">{{ sumUsageAverage$ | async}}</b> m3
             </div>
           </div>
           <div class="ui-g-2">
             <div class="ui-float-label">
               <label>{{ "State" | translate }}: </label>
             </div>
-            <div style="padding-top: 25px;"><b style="color: #931D03;">{{ sumDiffLastRead$ | async}}</b> m3
+            <div style="padding-top: 25px;"><b style="color: #266104">{{ sumDiffLastRead$ | async}}</b> m3
             </div>
           </div>
           </div>
